# Diabetes-predictions

./: .gitignore  BLUEPRINT.md  EXECUTION_PLAN.md  Makefile  pyproject.toml
data/model_ready/: global_features.parquet
data/processed/: country_year_panel.parquet  merged_panel.parquet  worldbank_country_year_panel.parquet
data/raw/who/: NCDMORT3070.json  NCD_GLUC_01.json  NCD_PAA.json
data/raw/worldbank/: NY.GDP.PCAP.PP.CD.json  SH.STA.OWAD.ZS.json  SH.XPD.CHEX.GD.ZS.json  SH.XPD.CHEX.PC.CD.json  SP.DYN.LE00.IN.json  SP.POP.65UP.TO.ZS.json  SP.POP.TOTL.json  SP.URB.TOTL.IN.ZS.json
db/: diabetes_trends.db  schema.sql
outputs/models/: bn_bin_edges.pkl  bn_model.pkl  svm_model.pkl  svm_scaler.pkl
outputs/reports/: simulation_results.csv
src/diabetes_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/extract/: who_gho.py  worldbank.py
src/features/: feature_matrix.py
src/load/: to_sqlite.py
src/models/: belief_network.py  evaluate.py  svm.py
src/simulations/: engine.py  scenarios.py
src/transform/: clean.py  merge.py  validate.py
