[build-system] 
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diabetes-prediction"
version = "0.1.0"
requires-python = ">=3.10" 

dependencies = [
    "pandas",
    "numpy",
    "requests", 
    "pyarrow", 
    "pandera",
    "pycountry",
    "scikit-learn",
    "xgboost",     
    "shap",   
    "matplotlib",                                                                                    
    "seaborn",   
    "plotly",                                                                                        
    "streamlit",
    "statsmodels",
    "pytest",
]